# vern

./: Cargo.toml  LICENSE  README.md  codecrafters.yml  vern.sh
.codecrafters/: compile.sh  run.sh
src/: main.rs
