[package]
name = "vern"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.94"                                # error handling
bytes = "1.9.0"                                  # helps manage buffers
thiserror = "2.0.6"                             # error handling
